--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,6 +9,27 @@ body {
     background-color: #fff;
   }
 
+
+  .img-fluid {
+    max-width: 100%;
+    height: auto;
+  }
+
+  #header-carousel img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .carousel-caption {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+  }
+
   hr {
     box-sizing: content-box;
     height: 0;
